
$Id$

2004-11-16 Karl Lehenbauer <karl-pg@sc.com>
    * libpgtcl will again build with versions of Tcl < 8.5 thanks to a little
      extra checking for HAVETCL_NEWDICTOBJ

    * Fixed several calls to Tcl_AppendStringsToObj whose arguments were 
      terminated with -1 instead of NULL, eliminating several segmentation
      violations that could occur while preparing error messages.

    * Removed spurious newline at the start of the error message when
      the query result handle passed to pg_result is invalid.

2004-11-05 Brett Schwarz <brett_schwarz@yahoo.com>
    * added delete proc for result handle cleanup

2004-11-02 Brett Schwarz <brett_schwarz@yahoo.com>
    * added delete proc for connection handle cleanup

2004-09-20 Brett Schwarz <brett_schwarz@yahoo.com>
    * added preliminary support for dicts in pg_result. Need to have
      Tcl 8.5 or the dicts package extension. Need to set            
      HAVETCL_NEWDICTOBJ manually for now.

2004-08-23 Brett Schwarz <brett_schwarz@yahoo.com>
    * added tcltest script of testing pgtcl.

2004-08-21 Brett Schwarz <brett_schwarz@yahoo.com>
    * Made the result handle into a command, and added associated command
      dispatcher.

2004-08-18 Brett Schwarz <brett_schwarz@yahoo.com>
    * Added another way to specify the connection string to pg::connect:
      pg::connect -connlist {host myhost port myport ...}. This is similiar
      to -conninfo, except that the arg is a key value list.

    * Added -connhandle option to pg::connect to specify the connection
      handle name. If not specified, then connection handle name is
      derived by pgtcl (as before).

2004-08-16 Brett Schwarz <brett_schwarz@yahoo.com>
    * added Pg_results (pg::results, pg_results) command that returns
      the result handles for a particular connection

2004-08-15 Brett Schwarz <brett_schwarz@yahoo.com>
    * Added new command pg::conninfo that returns a list of PG connection
      handles
